<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Ireceipt</string>
	<string name="new_scan_handler">new_scan_handler</string>
	<string name="manual_scan_handler">manual_scan_handler</string>
	<string name="receipts_handler">receipts_handler</string>
	<string name="statistics_handler">statistics_handler</string>

	<color name="gray">#cccccc</color>
	<color name="black">#000000</color>
	<color name="col">#FFF8DC</color>
	<color name="Tex">#A52A2A</color>
	<string name="CatEdit">OnClickEditCatDialog</string>
	<string name="getDialogPrice">OnClickEditPricekDialog</string>
	<string name="closeDialog">close5Dialog</string>
	<string name="EditStoreName">OnClickEditStoreDialog</string>

	<color name="red">#ff0000</color>
	<color name="white">#ffffff</color>
	<string name="check_box_handler">check_box_handler</string>
	<color name="green">#228b22</color>
	<color name="blue">#0000ff</color>
	<color name="SteelBlue">#4682b4</color>
	<color name="darkGreen">#006400</color>
<string name="onClickPic">onClickPic</string>
<string name="save_rec_handler">save_rec_handler</string>
<string name="EditRecNote">EditRecNote</string>
<string name="sync">sync</string>
<color name="darkGray">#838b83</color>
<string name="search">search</string>
<string name="advance">advance</string>
<string name="menu_zoom">Zoom</string>
<string name="menu_pan">Pan</string>
<string name="menu_reset">Reset</string>
<color name="darkGray2">#8b8878</color>
<color name="lightBlue">#00ced1</color>

<color name="brown">#8b4513</color>
<color name="darkgreen2">#228b22</color>
<color name="yellow">#ffffff00</color>
<color name="green2">#ff00ff00</color>
<color name="lightGray">#cdc8b1</color>
<string name="pieChart">pieChart</string>
<string name="deleteRec">deleteRec</string>
</resources>
